--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
     background-color: #f2f2f2;
+    background-image: url("img/donut-background.png");
     font-family: sans-serif;
 }
 .navbar {
-    background-color: #ff6600;
-    color: white;
+    background-color: rgba(255, 255, 255, 0.6);
+    color: rgb(255, 255, 255);
 }
 .navbar-brand {
     font-size: 30px;
@@ -94,7 +95,6 @@ footer p {
     font-size: 24px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
     transition: all 0.2s ease-in-out;
-    z-index: 2;
 }
   
 .cart-btn:hover {
