--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ footer p {
     font-size: 24px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
     transition: all 0.2s ease-in-out;
+    z-index: 2;
 }
   
 .cart-btn:hover {
