--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 2px;
+    align-items: center;
 }
 .nav-link {
     font-size: 20px;
