--- a/style.css
+++ b/style.css
@@ -7,6 +7,15 @@ body {
     background-color: rgba(255, 255, 255, 0.6);
     color: rgb(255, 255, 255);
 }
+
+.navbar-content {
+    width: 54%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .navbar-brand {
     font-size: 30px;
     font-weight: bold;
@@ -14,6 +23,11 @@ body {
     letter-spacing: 2px;
     align-items: center;
 }
+
+.navbar-collapse {
+    margin-left: 6.5vw;
+}
+
 .nav-link {
     font-size: 20px;
     text-transform: uppercase;
@@ -103,3 +117,15 @@ footer p {
     background-color: #ED91AD;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
 }
+
+@media (max-width: 768px) {
+    
+    .navbar-brand{
+        left: 0;
+        padding-right: 25vw;
+    }
+    .navbar-content{
+        width: 100%;
+        left: 0;
+    }
+  }
