--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ footer p {
     
     .navbar-brand{
         left: 0;
-        padding-right: 25vw;
+        padding-right: 15%;
     }
     .navbar-content{
         width: 100%;
