--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ footer p {
     z-index: 2;
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     
     .navbar-brand{
         display: flex;
@@ -128,6 +128,6 @@ footer p {
 
     .navbar-toggler{
         align-items: end;
-        margin-left: 22%;
+        margin-left: 2%;
     }
-  }
+  } */
