--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@ body {
     background-image: url("img/donut-background.png");
     font-family: sans-serif;
 }
+
+.content{
+    width: 80%;
+    margin: 0 auto;
+}
+
 .navbar {
     background-color: rgba(255, 255, 255, 0.6);
     color: rgb(255, 255, 255);
@@ -10,11 +16,11 @@ body {
 }
 
 .navbar-content {
-    width: 34.8%;
-    margin-left: 19.5%;
     display: flex;
-    justify-content: left;
+    justify-content: space-between;
     align-items: center;
+    max-width: 1110px;
+    margin: 0 auto;
 }
 
 .navbar-brand {
@@ -23,10 +29,6 @@ body {
     text-transform: uppercase;
     letter-spacing: 2px;
     align-items: center;
-}
-
-.navbar-collapse {
-    margin-left: 6.5vw;
 }
 
 .nav-link {
