--- a/style.css
+++ b/style.css
@@ -117,20 +117,8 @@ footer p {
     z-index: 2;
 }
 
-/* @media (max-width: 768px) {
-    
-    .navbar-brand{
-        display: flex;
-        left: 0;
+@media (max-width: 768px) {
+    body{
+        background-repeat: repeat-y;
     }
-    .navbar-content{
-        width: 100%;
-        left: 0;
-        margin-left: 0%;
-    }
-
-    .navbar-toggler{
-        align-items: end;
-        margin-left: 2%;
-    }
-  } */
+  }
